--- a/data/common.yaml
+++ b/data/common.yaml
@@ -9,3 +9,9 @@ gitlab_gpg::git_group: git
 gitlab_gpg::repos_path: /var/opt/gitlab/git-data/repositories
 gitlab_gpg::extra_gpg_keys: {}
 gitlab_gpg::protected_repos: {}
+gitlab_gpg::warning_message: 'Your new commits to this repository are not signed with a known GPG key.
+  Future commits may be rejected. Please read the following instructions:
+  https://docs.gitlab.com/12.1/ee/user/project/repository/gpg_signed_commits/'
+gitlab_gpg::reject_message: 'Your new commits to this repository are not signed with a known GPG key.
+  Please read the following instructions:
+  https://docs.gitlab.com/12.1/ee/user/project/repository/gpg_signed_commits/'
