--- a/data/common.yaml
+++ b/data/common.yaml
@@ -12,9 +12,11 @@ gitlab_gpg::warning_message: |
   Your new commits to this repository are not signed with a known GPG key.
   Future pushes may be rejected. Please read the following instructions
   https://docs.gitlab.com/12.1/ee/user/project/repository/gpg_signed_commits/
+  and have your key added to gitlab_gpg::trusted_keys
 gitlab_gpg::reject_message: |
   Your new commits to this repository are not signed with a known GPG key.
   Your push has been rejected. Please read the following instructions
   https://docs.gitlab.com/12.1/ee/user/project/repository/gpg_signed_commits/
+  and have your key added to gitlab_gpg::trusted_keys
 gitlab_gpg::notify_bin: /bin/true
 gitlab_gpg::manage_gitlab_keys: true
